# recursive-harness

./: .gitignore  .worktreeinclude  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  IDEAS.md  LOOP-CODIFY.md  PRIVACY.md  PROGRESS-codification.md  README.md  SECURITY.md  SUPPORT.md  account-init.sh  autonomy.json  features.json  install.sh  launch.ps1  launch.sh  privacy_state.py  private_state.py  project-init.sh  settings.json  statusline-command.sh  sync-account-sessions.ps1  sync-account-sessions.sh  uninstall.ps1  uninstall.sh  worktree-repos.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
agents/: critic.md  followup-synthesizer.md  harness-auditor.md  retro-miner.md
brand/: LANGUAGE.md  README.md  tokens.json
capabilities/: README.md  catalog.json
cartograph/: ATLAS-PULSE.md  ATLAS.md  PLAN-oracle-reviewer.md  README.md  ROADMAP.md  STATE.md  atlas.py  baseline.json  extract.py  health.py  test_artifacts.py  test_atlas.py  test_audit.py  test_diff.py  test_gate.py  test_hardening.py  test_mission.py  test_query.py  test_spec.py  test_spec_gate.py
commands/: atlas.md  calibrate.md  capture-eval.md  followups.md  gc.md  harness-pr.md  heal.md  meta-retro.md  retro-backlog.md  retro.md  roadmap.md  run-evals.md  standup.md  venture.md
docs/: README.md  architecture.md  codeql-triage-2026-07-17.md  codex-consumer-acceptance.md  codex-specialization.md  compatibility.md  coordinate-plugin.md  getting-started.md  guard-plugin.md  lab-plugin.md  learn-plugin.md  observe-claude-acceptance.md  (+8 more)
fleet/: LICENSE  README.md  __init__.py  __main__.py  claims.py  cli.py  eventlog.py  mcp_server.py  postbox.py  pyproject.toml  render.py  requirements-mcp.txt  test_claims.py  test_cli.py  test_eventlog.py  test_extraction.py  test_mcp.py  test_postbox.py  test_render.py  test_units.py  units.py
fleet/pm/: BACKLOG.md  BOARD.md  BUGS.md  README.md  ROADMAP.md  TOOLING.md
fleet/pm/specs/: ARCHITECTURE.md  SPEC-01-resource-claims.md  SPEC-02-unit-doc.md  SPEC-03-postbox.md  SPEC-05-cli.md  TESTPLAN.md
products/agentops-trust-os/engine/: .gitignore  pyproject.toml
products/agentops-trust-os/engine/agentops/: __init__.py  api.py  compliance.py  cost.py  evals.py  incidents.py  policy.py  redaction.py  schema.py  sdk.py  storage.py
products/agentops-trust-os/engine/agentops/dashboard/: app.js  index.html  style.css
products/agentops-trust-os/engine/agentops/integrations/: __init__.py  anthropic.py  langchain.py  openai.py  slack.py
products/agentops-trust-os/engine/examples/: coding_agent_demo.py  github_actions_pr_review.yml
products/agentops-trust-os/engine/tests/: conftest.py  test_api.py  test_compliance.py  test_evals.py  test_hardening.py  test_incidents.py  test_policy.py  test_redaction.py  test_schema.py  test_sdk.py  test_storage.py
(+466 files in other folders)
