[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-trust-os"
version = "0.1.0"
description = "Agent Flight Recorder — record, govern, and prove what your AI agents do."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentOps Trust OS" }]
keywords = ["ai-agents", "observability", "governance", "llmops", "ai-trust", "compliance"]

# The CORE SDK has ZERO required runtime dependencies — a deliberate adoption choice.
dependencies = []

[project.optional-dependencies]
# Only needed to self-host the ingestion API + dashboard. The SDK never imports these.
api = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=7", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/agentops-trust-os/agentops"

[tool.setuptools.packages.find]
include = ["agentops*"]

[tool.setuptools.package-data]
agentops = ["dashboard/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
